	PR middle-end/24952 	* combine.c (try_combine): Explicitly check whether GET_CODE is 	a SET or a CLOBBER, instead on checking that it isn't a USE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111425 138bc75d-0d04-0410-961f-82ee72b054a4